fix spacing in landing page

--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,8 @@
 }
 .landingDesc {
   background-color: #404040;
-  width: 100%;
+  width: 92%;
+  max-width: 100%;
   padding: 20px;
   border-radius: 10px;
   text-align: center;
@@ -103,6 +104,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.nameDescDiv1 {
+  padding-right: 10px;
 }
 .toroLogo {
   margin-top: 18px;
